--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -391,7 +391,7 @@ button:hover {
   font-family: sans-serif;
 ">
 
-  <label>Angle: <input id="light-angle" type="range" min="0" max="360" step="1" value="250"></label>
+  <label><input id="light-angle" type="range" min="0" max="360" step="1" value="250"></label>
 
 
 </div>
