--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -391,8 +391,9 @@ button:hover {
   font-family: sans-serif;
 ">
 
-  <label><input id="light-angle" type="range" min="0" max="360" step="1" value="250"></label>
-
+<div style="display: flex; align-items: center; gap: 10px;">
+  <input id="light-angle" type="range" min="0" max="360" step="1" value="250" style="width: 100px; height: 2px; border-radius: 4px; appearance: none; background: #ccc;">
+</div>
 
 </div>
 
