--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -715,9 +715,10 @@ document.getElementById("screenshot-btn").addEventListener("click", () => {
   clone.style.transformOrigin = "top center";
   clone.style.position = "absolute";
   clone.style.left = "-9999px";
+  clone.style.background = "#ffffff";
   document.body.appendChild(clone);
   html2canvas(target,{useCORS: true,
-  allowTaint: false, backgroundColor: null, scale: 3 }).then(canvas => {
+  allowTaint: false, backgroundColor: null, scale: window.devicePixelRatio * 3}).then(canvas => {
 
 
     const imgData = canvas.toDataURL("image/png");
