--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -470,10 +470,10 @@
           style="background-color: #e0e0e5; padding: 15px; border-radius: 10px"
         >
           <button onclick="clearDesignArea()" style="margin-bottom: 10px">
-            Clean
+            Clean Tray
           </button>
           <button onclick="toggleBackground()" style="margin-bottom: 10px">
-            Toggle Background
+            Change Bead Tray
           </button>
           <div style="margin-top: 10px">
             <input type="number" id="bead-count" value="18" min="1" max="50" />
