--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -555,7 +555,7 @@
           </div>
         </div>
         <div
-          class="design-area light"
+          class="design-area dark"
           id="design-area"
           ondragover="event.preventDefault()"
           ondrop="drop(event)"
