--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -1010,6 +1010,7 @@ const moonIcon = document.getElementById("moon-icon");
       createImageBead("howlite.png", "large", "round", 1.0);
       createImageBead("lava-stone.png", "large", "round", 5.8);
       createImageBead("green-rutilated-quartz.png", "large", "round", 8.8);
+      createImageBead("hetian-jade-green.png", "large", "round", 4.0);
       createImageBead("goldenobsidian.png", "large", "round", 10.2);
       createImageBead("bodhi.png", "large", "round", 5.2);
       createImageBead("silver-ball.png", "large", "round", 20.2);
@@ -1019,6 +1020,8 @@ const moonIcon = document.getElementById("moon-icon");
       createImageBead("goldwhitebead-tocentre.png", "large", "round", 8.0);
       createImageBead("goldcircle-tocentre.png", "large", "round", 8.0);
       createImageBead("red-heart-pendant-tocentre.png", "large", "round", 10.2);
+      createImageBead("gold-money.png", "large", "round", 15.0);
+
 
       function addBead(color, size, shape) {
         if (getFilledBeadCount() >= beadCount) {
