--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -762,7 +762,7 @@
 
 <script>
   let mediaRecorder, recordedChunks = [], recordingCanvas, canvasCtx, intervalId;
-  const targetElement = document.getElementById("zoom-wrapper");
+  const targetElement = document.getElementById("design-area");
   const recordBtn = document.getElementById("record-btn");
   const downloadLink = document.getElementById("download-link");
 
