--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -265,12 +265,14 @@
 
       .design-area.light {
         background-image: url("crystaltray-light.PNG");
+        background-repeat: no-repeat;
       }
       #price-toggle-handle:hover {
         background: #666;
       }
       .design-area.dark {
         background-image: url("jadetray.png");
+        background-repeat: no-repeat;
       }
       #tray-bg {
         transition: opacity 0.5s ease;
