--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -911,7 +911,7 @@ const moonIcon = document.getElementById("moon-icon");
       document
         .getElementById("screenshot-btn")
         .addEventListener("click", () => {
-          const target = document.getElementById("zoom-wrapper");
+          const target = document.getElementById("design-area");
           const clone = target.cloneNode(true);
           clone.style.transform = "scale(1)";
           clone.style.transformOrigin = "top center";
