--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -494,15 +494,17 @@
           <i class="fa-solid fa-camera"></i>
         </button>
         <button
-  id="record-btn"
-  style="font-size: 20px; padding: 10px; border-radius: 8px"
-  title="Start/Stop Recording"
-  data-recording="false"
->
-  <i class="fa-solid fa-circle-dot"></i>
-</button>
-<a id="download-link" style="display: none"></a>
+          id="record-btn"
+          style="font-size: 20px; padding: 10px; border-radius: 8px"
+          title="Start/Stop Recording"
+          data-recording="false"
+          >
+          <i class="fa-solid fa-circle-dot"></i>
+        </button>
+      <a id="download-link" style="display: none"></a>
+      <span id="recording-timer" style="margin-left: 10px; font-family: monospace; font-size: 14px; color: red; display: none;">00:00</span>
       </div>
+
       <div
         id="zoom-wrapper"
         style="
@@ -767,6 +769,15 @@
   const targetElement = document.getElementById("design-area");
   const recordBtn = document.getElementById("record-btn");
   const downloadLink = document.getElementById("download-link");
+  const recordingTimer = document.getElementById("recording-timer");
+let timerSeconds = 0;
+let timerInterval = null;
+
+function updateTimerDisplay() {
+  const minutes = String(Math.floor(timerSeconds / 60)).padStart(2, '0');
+  const seconds = String(timerSeconds % 60).padStart(2, '0');
+  recordingTimer.textContent = `${minutes}:${seconds}`;
+}
 
   const originalBgPos = targetElement.style.backgroundPosition;
   targetElement.style.backgroundPosition = "center";
@@ -775,11 +786,22 @@
     if (recordBtn.dataset.recording === "true") {
 
       clearInterval(intervalId);
+      clearInterval(timerInterval);
       mediaRecorder.stop();
       recordBtn.innerHTML = '<i class="fa-solid fa-circle-dot"></i>';
       recordBtn.dataset.recording = "false";
       return;
     }
+
+    timerSeconds = 0;
+  updateTimerDisplay();
+  recordingTimer.style.display = "inline-block";
+
+  timerInterval = setInterval(() => {
+    timerSeconds++;
+    updateTimerDisplay();
+  }, 1000);
+
 
 
     const rect = targetElement.getBoundingClientRect();
