--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -936,7 +936,7 @@ const moonIcon = document.getElementById("moon-icon");
         .addEventListener("click", () => {
           const target = document.getElementById("design-area");
           const clone = target.cloneNode(true);
-          clone.style.transform = "scale(1)";
+          clone.style.transform = "scale(${zoomLevel})";
           clone.style.transformOrigin = "top center";
           clone.style.position = "absolute";
           clone.style.left = "-9999px";
