--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -263,17 +263,20 @@
         padding: 16px;
       }
 
-      .design-area.light {
-        background-image: url("crystaltray-light.PNG");
-        background-repeat: no-repeat;
-      }
+
       #price-toggle-handle:hover {
         background: #666;
       }
-      .design-area.dark {
-        background-image: url("jadetray.png");
-        background-repeat: no-repeat;
-      }
+      #tray-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  pointer-events: none;
+  z-index: 0;
+}
       #tray-bg {
         transition: opacity 0.5s ease;
       }
@@ -572,7 +575,7 @@
           id="design-area"
           ondragover="event.preventDefault()"
           ondrop="drop(event)"
-        ></div>
+        ><img id="tray-image" src="jadetray.png" /></div>
         <div
           id="music-wrapper"
           onclick="toggleMusic()"
@@ -1301,10 +1304,12 @@ const moonIcon = document.getElementById("moon-icon");
       }
 
       function toggleBackground() {
-        let designArea = document.getElementById("design-area");
-        designArea.classList.toggle("dark");
-        designArea.classList.toggle("light");
-      }
+
+  const trayImg = document.getElementById("tray-image");
+  const isDark = trayImg.getAttribute("src").includes("jade");
+  trayImg.src = isDark ? "crystaltray-light.PNG" : "jadetray.png";
+}
+
     </script>
   </body>
 </html>
