--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -39,6 +39,13 @@
       display: block;
     }
 
+    .toggle-container {
+
+    top: 20px;
+    left: 20px;
+    z-index: 200;
+    }
+
     #price-display.night {
       background: #222;
       color: #eee;
